# renderer

./: .clang-format  .gitignore  CMakeLists.txt  README.md  renderer.genny
include/carbon/: carbon.hpp  global.hpp  globals.hpp  input.hpp  layout.hpp  theme.hpp
include/carbon/layout/: axes.hpp  axis.hpp  cls.hpp  item.hpp  model.hpp  properties.hpp
include/carbon/layout/containers/: base.hpp  base_container.hpp  base_flex.hpp  base_flex_container.hpp  flex.hpp  flex_container.hpp  flex_line.hpp  grid.hpp  grid_container.hpp
include/carbon/widgets/: bars.hpp  button.hpp  label.hpp  snap.hpp  widget.hpp  window.hpp
include/carbon/widgets/containers/: groupbox.hpp  panel.hpp  tab_bar.hpp  window.hpp
include/carbon/widgets/controls/: button.hpp
include/carbon/widgets/input/: label.hpp
include/renderer/: base_renderer.hpp  buffer.hpp  color.hpp  command.hpp  context.hpp  core.hpp  device.hpp  device_resources.hpp  easing.hpp  font.hpp  layout.hpp  pipeline.hpp  polyline.hpp  renderer.hpp  texture.hpp  vertex.hpp
include/renderer/d3d11/: device_resources.hpp  pipeline.hpp  renderer.hpp  texture2d.hpp  texture_atlas.hpp
include/renderer/d3d11/shaders/: pixel.hlsl
include/renderer/d3d11/shaders/compiled/: pixel.h  vertex.h
include/renderer/geometry/: bezier.hpp  ear_clipping.hpp  polyline.hpp
include/renderer/geometry/shapes/: polyline.hpp
include/renderer/image/: npatch.hpp
include/renderer/impl/: d3d11.hpp  device.hpp  directx11.hpp  dx11.hpp
include/renderer/shaders/: command.hpp  constant_buffers.hpp  pixel.hlsl  rgb2hsv.hlsl  types.hlsl  vertex.hlsl
include/renderer/shaders/compiled/: pixel.h  vertex.h
include/renderer/shapes/: bezier.hpp  polyline.hpp  shape.hpp
include/renderer/types/: batch.hpp  color.hpp  constant_buffers.hpp  font.hpp  vertex.hpp
include/renderer/util/: bezier.hpp  easing.hpp  helper.hpp  polyline.hpp  render_vector.hpp  small_vector.hpp  soo.hpp  util.hpp  win32_window.hpp  window.hpp
lib/: CMakeLists.txt
lib/renderer/: CMakeLists.txt  README.md
lib/renderer/include/renderer/: buffer.hpp  color.hpp  core.hpp  font.hpp  pipeline.hpp  renderer.hpp  vertex.hpp
lib/renderer/include/renderer/d3d11/: device.hpp  pipeline.hpp  renderer.hpp  texture2d.hpp  texture_atlas.hpp
lib/renderer/include/renderer/d3d11/shaders/: constant_buffers.hpp  pixel.hlsl
lib/renderer/include/renderer/d3d11/shaders/compiled/: pixel.h  vertex.h
lib/renderer/include/renderer/geometry/: bezier.hpp  ear_clipping.hpp  polyline.hpp
lib/renderer/include/renderer/geometry/shapes/: polyline.hpp  shape.hpp
lib/renderer/include/renderer/image/: npatch.hpp
lib/renderer/include/renderer/interfaces/base/: renderer.hpp
lib/renderer/include/renderer/interfaces/d3d11/: device.hpp  pipeline.hpp  renderer.hpp
lib/renderer/include/renderer/shaders/compiled/: pixel.h  vertex.h
lib/renderer/include/renderer/types/: color.hpp
lib/renderer/include/renderer/util/: easing.hpp  small_vector.hpp  util.hpp  win32_window.hpp  window.hpp
lib/renderer/src/: buffer.cpp  color.cpp  pipeline.cpp  renderer.cpp
lib/renderer/src/d3d11/: pipeline.cpp  renderer.cpp
lib/renderer/src/geometry/: bezier.cpp  polyline.cpp
lib/renderer/src/geometry/shapes/: polyline.cpp  shape.cpp
lib/renderer/src/types/: color.cpp
lib/renderer/src/util/: easing.cpp  win32_window.cpp  win32_window.hpp  window.cpp
src/: buffer.cpp  carbon.cpp  color.cpp  device.cpp  device_resources.cpp  font.cpp  global.cpp  globals.cpp  input.cpp  layout.cpp  pipeline.cpp  polyline.cpp  renderer.cpp  theme.cpp
src/d3d11/: device_resources.cpp  pipeline.cpp  renderer.cpp
src/geometry/shapes/: polyline.cpp
src/impl/: d3d11.cpp  device.cpp  dx11.cpp
src/layout/: axes.cpp  axis.cpp  item.cpp  model.cpp  properties.cpp
src/layout/containers/: base.cpp  base_container.cpp  base_flex.cpp  base_flex_container.cpp  flex.cpp  flex_container.cpp  flex_line.cpp  grid.cpp  grid_container.cpp
src/shapes/: bezier.cpp  polyline.cpp  shape.cpp
src/types/: color.cpp  font.cpp
src/util/: bezier.cpp  easing.cpp  helper.cpp  polyline.cpp  util.cpp  win32_window.cpp  window.cpp
src/widgets/: widget.cpp
test/: CMakeLists.txt  main.cpp
test/include/force_engine/: force.hpp  node.hpp  quadtree.hpp  simulation.hpp
test/include/force_engine/forces/: center.hpp  collide.hpp  force.hpp  link.hpp  many_body.hpp  radial.hpp
test/src/: main.cpp
test/src/force_engine/: quadtree.cpp  simulation.cpp
test/src/force_engine/forces/: center.cpp  collide.cpp  link.cpp  many_body.cpp  radial.cpp
